# Maya

./: .gitignore  Dockerfile  README.md  add_last_data.py  add_new_data.py  combine_training_data.py  docker-compose.yml  main.py  maya.py  pyproject.toml  requirements.txt  server.py
ghana_contraception_lora/: adapter_config.json
ghana_contraception_lora_old/: adapter_config.json
ghana_contraception_lora_old/ghana_contraception_lora/: README.md
static/: index.html
