[project]
name = "maya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.9.1",
    "transformers>=4.57.1",
    "peft>=0.13.2",
    "fastapi>=0.121.2",
    "uvicorn[standard]",
    "accelerate",
    "bitsandbytes",
    "safetensors",
    "python-multipart",

]
